# tt-metal

./: .gitignore  CMakeLists.txt  build_metal.sh  build_metal_in_docker.sh  build_metal_with_conan.sh  conan_profile_gcc_12.txt  conanfile.py  conanfile.txt  conftest.py  docker_wrapper.sh  exports.sh  format.py  install_dependencies.sh  mnist.py  multi_host_fabric_tests.sh  run_build_metal.sh  run_docker_build_in_container.sh  run_docker_build_test.sh  setup.py  tmp_inspector.sh
.github/: CODEOWNERS
.github/actions/prepare-metal-run/: action.yml
.github/workflows/: blackhole-llmbox-unit-tests-impl.yaml  blackhole-nightly-tests-impl.yaml  blackhole-nightly-tests.yaml  build-artifact.yaml  didt-tests.yaml  perf-device-models-impl.yaml  perf-models-impl.yaml  single-card-demo-tests-impl.yaml  submodule-update.yaml  tg-quick.yaml  tg-unit-tests-impl.yaml  tt-metal-l2-nightly-impl.yaml  ttnn-post-commit.yaml
cmake/: tracy.cmake
dockerfile/: Dockerfile.conan-test  Dockerfile.conan-test.debian  Dockerfile.conan-test.fedora  Dockerfile.conan-test.install-dependencies  Dockerfile.conan-test.redhat  Dockerfile.conan-test.ubuntu
models/: utility_functions.py
models/common/: rmsnorm.py
tech_reports/nd_sharding/: reduce_h_nd_sharding_perf_report.md
test_package/: conanfile.py
tests/scripts/: run_performance.sh
tests/ttnn/unit_tests/gtests/: CMakeLists.txt  captured_api_calls_small.h  captures.cpp  captures.h  convert_to_gtest.py  ttnn_suite_device_fixture.hpp
tests/ttnn/unit_tests/gtests/ccl/: test_fabric_edm_common.hpp
tests/ttnn/unit_tests/gtests/ccl/kernels/: edm_fabric_writer.cpp
tests/ttnn/unit_tests/gtests/emitc/: emitc.hpp  test_program_cache.cpp
tt_metal/: CMakeLists.txt  sfpi-version.sh
tt_metal/common/: CMakeLists.txt  metal_soc_descriptor.cpp
tt_metal/distributed/: CMakeLists.txt  fd_mesh_command_queue.cpp  mesh_device.cpp  mesh_socket_utils.cpp  mesh_socket_utils.hpp
tt_metal/fabric/: control_plane.cpp  erisc_datamover_builder.cpp  fabric.cpp
tt_metal/impl/: CMakeLists.txt
tt_metal/include/: compute_kernel_api.h
tt_metal/llrt/: rtoptions.hpp  tt_cluster.cpp
tt_metal/programming_examples/: CMakeLists.txt
tt_metal/python_env/: requirements-dev.txt
tt_metal/soc_descriptors/: blackhole_140_arch.yaml  wormhole_b0_80_arch.yaml
ttnn/: CMakeLists.txt
(+303 files in other folders)
